fix image backgrounds for dark mode

--- a/css/tufte.css
+++ b/css/tufte.css
@@ -62,6 +62,10 @@ body {
         background-color: #151515;
         color: #ddd;
     }
+
+    img:not([noinvert]){
+        filter: invert(88.1%) hue-rotate(90deg);
+    }
 }
 
 h1 {
